training-data/106-dataset/bugs-data/keras/26/110001100000000000_log_1.txt
Traceback (most recent call last):
  File "/Library/Frameworks/Python.framework/Versions/3.11/bin/run_custom_patch", line 8, in <module>
    sys.exit(main())
             ^^^^^^
  File "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/BugsInPy/run_custom_patch.py", line 154, in main
    replace_code(bug_data, repo_bug_id, file_path)
  File "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/BugsInPy/run_custom_patch.py", line 46, in replace_code
    replacement_tree = ast.parse(replacement_code)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<unknown>", line 6
    """ Iterates over the time dimension of a tensor.
IndentationError: unexpected indent

